--- a/index.html
+++ b/index.html
@@ -427,80 +427,11 @@
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
                 <p style="text-align: center"><b style="text-align:left; display: inline-block">
                     <ul>
-                        <li>We would greatly appreciate if you could RSVP before the 1st of September '23</li>
-                        <li>Please find the invite code on your invitation</li>
-                        <li>You may use the same email address for multiple people</li>
+                        <li>We are no longer accepting RSVPs at this time </li>
                         <li>There will also be a prime rib station at dinner in addition to your meal choice</li>
                     </ul>
                     </b>
                 </p>
-                <form id="rsvp-form" class="rsvp-form"
-                      action=""
-                      method="POST">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
-                                                                     required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
-                                                                class="" min="0"
-                                                                placeholder="Invite code"
-                                                                required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="first_name" class=""
-                                                                 placeholder="First name"
-                                                                 required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="last_name" class=""
-                                                             placeholder="Last name"
-                                                             required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-cutlery"></i>
-                                <select class="form-control" name="meal" id="meal" form="rsvp-form" required>
-                                    <option selected disabled value="">Meal Choice</option>
-                                    <option value="chicken">Chicken</option>
-                                    <option value="tofu">Tofu</option>
-                                    <option value="nuggets">Children's Chicken Nuggets</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <a style="padding-bottom: 2rem; display: block;"><b id="add-person">Add Another Person</b></a>
-                    <div class="row">
-                        <div class="col-md-12" id="alert-wrapper"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <button class="btn-fill rsvp-btn" style="background-color:#d5e7bd; font-weight: 600" value="true" type="submit">
-                                RSVP Yes
-                            </button>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <button class="btn-fill rsvp-btn" style="background-color:#e7bdd5; font-weight: 600" value="false" type="submit">
-                                RSVP NO
-                            </button>
-                        </div>
-                    </div>
-                </form>
-
                 <p><b>If you have any questions or problems please email us at <a href = "mailto: clarejaredwadawedding@gmail.com">clarejaredwadawedding@gmail.com</a></b></p>
             </div>
         </div>
